--- a/sms/bin/AndroidManifest.xml
+++ b/sms/bin/AndroidManifest.xml
@@ -13,17 +13,35 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+         <activity android:name=".ReceiveSmsAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
-<uses-permission android:name="android.permission.SEND_SMS" />
+
+<!--发送、接收、读取短信的权限  -->
+<uses-permission android:name="android.permission.SEND_SMS"/>
+<uses-permission android:name="android.permission.RECEIVE_SMS"/>
+<uses-permission android:name="android.permission.READ_SMS" />
+
+<!--在sdcard中添加写入数据的权限 -->
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>  
+
+<!--在sdcard中创建/删除文件的权限 -->  
+<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>  
+<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>  
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+<!--获取本机手机号的权限 -->
+<uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
 
 </manifest>
